# stack-edit

./: .eslintrc.json  package.json  tsconfig.json
.changeset/: strong-yaks-pay.md
public/: browserconfig.xml  index.html  manifest.json
src/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: index.tsx
src/assets/: logo_info.txt
src/config/: index.ts
src/context/: index.tsx
src/data/: fs.ts
src/styles/: index.css
src/tests/: App.test.tsx
src/types/: context.ts
